--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 w-full max-w-5xl" id="project-grid">
         
         <!-- Project 1 -->
-        <a href="https://example.drtc.net/lbtees.html" class="project-button p-5 rounded-2xl flex items-center gap-4 group">
+        <a href="https://example.drtc.net/LBTees/index.html" class="project-button p-5 rounded-2xl flex items-center gap-4 group">
             <div class="w-12 h-12 rounded-xl bg-blue-500/10 flex items-center justify-center text-blue-400 group-hover:scale-110 transition-transform">
                 <i class="fas fa-globe text-xl"></i>
             </div>
