--- a/LBTees/index.html
+++ b/LBTees/index.html
@@ -117,7 +117,7 @@
 
             <!-- Logo -->
             <div class="text-2xl font-bold tracking-tighter">
-                <a href="/">LB<span class="text-gray-400">TEES</span></a>
+                <a href="/LBTees/index.html">LB<span class="text-gray-400">TEES</span></a>
             </div>
 
             <!-- Icons -->
