--- a/LBTees/index.html
+++ b/LBTees/index.html
@@ -110,9 +110,9 @@
 
             <!-- Navigation (Desktop) -->
             <nav class="hidden md:flex space-x-8 uppercase text-xs font-semibold tracking-widest">
-                <a href="#" class="nav-link">Shop All</a>
-                <a href="#" class="nav-link">New Arrivals</a>
-                <a href="#" class="nav-link">Collections</a>
+                <a href="/LBTees/shop.html" class="nav-link">Shop All</a>
+                <a href="/LBTees/new.html" class="nav-link">New Arrivals</a>
+                <a href="/LBTees/collections.html" class="nav-link">Collections</a>
             </nav>
 
             <!-- Logo -->
